--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-body {
-  padding: 0;
-  margin: 0;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
