--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 @layer components {
   #books-container {
-    @apply border-8 w-2/3 m-auto border-green-400 rounded-lg;
+    @apply border-8 w-2/3 border-green-400 rounded-lg;
   }
 
   .book-information {
